--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Reseteo de la pagian */
-*{
+* {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -7,6 +7,7 @@
     border: none;
     outline: none;
 }
+
 /*Fuentes */
 @font-face {
     font-family: ;
@@ -14,30 +15,27 @@
 }
 
 :root {
-    --header-bgcolorsecond:;
-    --header-colormain:;
-    --header-colorsecond:;
-    --main-bgcolormain:; 
+    --header-bgcolorsecond: ;
+    --header-colormain: ;
+    --header-colorsecond: ;
+    --main-bgcolormain: ;
 }
 
-body{
-
-}
+body {}
 
 header {
-    background-color:rgba(132, 131, 131, 1);
+    background-color: rgba(132, 131, 131, 1);
     height: 225px;
-    display:flex;
+    display: flex;
+    align-items: center;
     justify-content: space-between;
-    align-items:center;
-    justify-content: space-around;
-
 }
 
-.Fotodeperfil{
+.header_right {
     width: 200px;
     height: 200px;
     align-items: end;
+    float: right;
 }
 
 .Logo_empresa {
@@ -45,6 +43,7 @@ header {
     height: 200px;
 
 }
+
 .Columna img {
     border border-radius: 20px;
     float: left;
