--- a/style.css
+++ b/style.css
@@ -44,13 +44,23 @@ header {
 
 }
 
-.Columna img {
-    border border-radius: 20px;
-    float: left;
-    padding: 96px;
-    width: 600px;
-    height: 600px;
-    align-items: center;
+.Imagenes {
+    display: flex;
     justify-content: center;
+}
 
+.Imagenes1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20%;
+    padding-top: 6%;
+}
+
+.Imagenes1 img {
+    width: 20%;
+    height: 40%;
+    border-radius: 10%;
+    object-fit: cover;
+    
 }
