--- a/style.css
+++ b/style.css
@@ -26,19 +26,20 @@ body {}
 header {
     background-color: rgba(132, 131, 131, 1);
     height: 225px;
-    display: flex;
     align-items: center;
     justify-content: space-between;
+    display: flex;
+    
 }
-
+.header_left,
 .header_right {
-    width: 200px;
-    height: 200px;
-    align-items: end;
-    float: right;
-}
+      
+      align-items: center;
+      gap: 1em;
+      padding: 0 8em;
+  }
 
-.Logo_empresa {
+.logo {
     width: 200px;
     height: 200px;
 
@@ -58,8 +59,10 @@ header {
 }
 
 .Imagenes1 img {
-    width: 20%;
-    height: 30%;
-    border-radius: 10%;
+    width: 55em;
+    height: 55em;
+    border-radius: 5%;
     object-fit: cover;
+    
+    
 }
