--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 /* Estilos generales para resetear márgenes, padding y estilos de lista y texto */
 * {
     margin: 0;
@@ -21,11 +19,10 @@ body {
 header {
     background-color: rgba(132, 131, 131, 1);
     height: 225px;
-    align-content:center;
-    padding-top: 60px;
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
 }
-<<<<<<< HEAD
-<<<<<<< HEAD
 
 /* Estilos para la parte izquierda y derecha del encabezado */
 .header_left,
@@ -47,19 +44,6 @@ main {
     display: flex;
     justify-content: space-around;
     padding: 20px;
-=======
-=======
->>>>>>> 906ac2de44a5f2f6be45538acab97583c18a00f5
-.header_right .header_left{
-    width: 200px;
-    height: 200px;
-    align-items: end;
-    float: right;
-    justify-content: space-between;
-<<<<<<< HEAD
->>>>>>> 906ac2de44a5f2f6be45538acab97583c18a00f5
-=======
->>>>>>> 906ac2de44a5f2f6be45538acab97583c18a00f5
 }
 
 /* Estilos para cada columna de imágenes */
