--- a/style.css
+++ b/style.css
@@ -1,129 +1,77 @@
-/* Estilos generales para resetear márgenes, padding y estilos de lista y texto */
-* {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
-    border: none;
-    outline: none;
-}
-
-/* Estilos generales del cuerpo del documento */
 body {
     margin: 0;
     padding: 0;
-    background-image: url("../rc2-project2-project-2-group-7/img/Fondo\ de\ pagina.jpg");
+    background-image: url(./img/Leonardo_Diffusion_XL_crame_una_galaxia_donde_se_vean_tambin_n_2_1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  
 }
 
-/* Estilos para la sección de encabezado */
 header {
     background-color: rgba(132, 131, 131, 1);
-    height: 225px;
-    align-items: center;
-    justify-content: space-between;
-    display: flex;
+    height: 75px;
+}
+.img-logo {
+    height: 80px;
+    width: 80px;
+    margin-bottom: 300px;
 }
 
-/* Estilos para la parte izquierda y derecha del encabezado */
-.header_left,
-.header_right {
-    display: flex;
-    align-items: center;
-    gap: 1em;
-    padding: 0 8em;
-}
-
-/* Estilos para el logo de la empresa */
-.logo {
-    width: 250px;
-    height: 250px;
-}
-
-/* Estilos para la sección principal */
-main {
+.img-container-rocket {
     display: flex;
     justify-content: space-around;
-    padding: 20px;
-    justify-content: center;
+    margin-top: 170px;
 }
-
-/* Estilos para cada columna de imágenes */
-
-.column {
+.img-container-rocket-2 {
     display: flex;
-    flex-direction: column;
-    margin: 0 auto; /* Centra horizontalmente */
-    padding-top: 5%;
-    align-items: center; /* Centra verticalmente */
-    margin-left: 30px;
-
-}
-
-
-/* Estilos para el contenedor de cada imagen con texto */
-.image-container {
+    justify-content: space-around;
     position: relative;
+    bottom: 225px;
+    transform: translateY(50%);
+}
+
+.img-rocket-1, .img-rocket-2, .img-rocket-3, .img-rocket-4, .img-rocket-5, .img-rocket-6{
+    width: 200px;
+    border-radius: 10px;
+}
+
+.icons {
+    height: 250px;
     width: 100%;
-    
 }
 
-
-/* Estilos para las imágenes */
-.image-container img {
-    width: 300%;
-    height: auto;
-    border-radius: 10%;
-}
-
-
-/* Estilos para el overlay con iconos, botón y texto descriptivo */
-.overlay {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
+.circle {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-/* Efecto de transición al pasar el ratón sobre la imagen */
-.image-container:hover .overlay {
-    opacity: 1;
-}
-
-/* Estilos para el contenedor de iconos */
-.icon-container {
-    display: flex;
+    margin: 40px 40px 0px 40px;
     justify-content: center;
-    margin-top: 20px;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgb(252, 110, 58);
+
 }
 
-/* Estilos para cada icono */
-.icon {
-    margin: 0 20px; /* Ajusta el valor según sea necesario */
-    font-size: 24px; /* Ajusta el valor según sea necesario */
+.circle i {
+    font-size: 25px;
 }
-
-/* Estilos para el texto descriptivo */
-.overlay p {
-    margin-top: 10px;
-    color: white;
+.card-container {
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    bottom: 60px;
+    transform: translateY(50%);
 }
+.card-container-2 {
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    bottom: 150px;
+    transform: translateY(50%);
+    
 
-/* Estilos para el botón debajo de la imagen */
-.image-button {
-    display: block;
-    margin-top: 10px;
-    padding: 12px 24px; /* Ajusta el valor según sea necesario */
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 8px; /* Ajusta el valor según sea necesario */
-    cursor: pointer;
-    font-size: 18px; /* Ajusta el valor según sea necesario */
+}
+hr {
+    border: 30px solid rgba(132, 131, 131, 1); 
+      margin: auto; 
 }
