--- a/styleportada.css
+++ b/styleportada.css
@@ -24,7 +24,7 @@ img {
 }
 
 button {
-    pposition: absolute;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
