--- a/styleportada.css
+++ b/styleportada.css
@@ -34,6 +34,7 @@ button {
     cursor: pointer;
     background-color: rgb(233, 10, 10);
     z-index: 1;
+}
 
 
 
@@ -57,5 +58,4 @@ button {
 
 
 
-  
   
